--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -48,7 +48,7 @@
                       android:title="@string/pref_mms_clear_search_history_title"
                       android:summary="@string/pref_mms_clear_search_history_summary" />
 -->
-     <CheckBoxPreference android:defaultValue="true"
+     <SwitchPreference android:defaultValue="true"
                       android:key="pref_key_auto_delete"
                       android:summary="@string/pref_summary_auto_delete"
                       android:title="@string/pref_title_auto_delete" />
@@ -90,20 +90,19 @@
                       android:entries="@array/send_delay_duration_entries"
                       android:entryValues="@array/send_delay_duration_values"
                       android:defaultValue="0"/>
-    <CheckBoxPreference android:defaultValue="@bool/def_sms_delivery_reports"
+    <SwitchPreference android:defaultValue="@bool/def_sms_delivery_reports"
                       android:key="pref_key_sms_delivery_reports"
                       android:summary="@string/pref_summary_sms_delivery_reports"
                       android:title="@string/pref_title_sms_delivery_reports" />
-    <CheckBoxPreference android:defaultValue="@bool/def_sms_delivery_reports_slot1"
+    <SwitchPreference android:defaultValue="@bool/def_sms_delivery_reports_slot1"
                       android:key="pref_key_sms_delivery_reports_slot1"
                       android:summary="@string/pref_summary_sms_delivery_reports"
                       android:title="@string/pref_title_sms_delivery_reports_slot1" />
-    <CheckBoxPreference android:defaultValue="@bool/def_sms_delivery_reports_slot2"
+    <SwitchPreference android:defaultValue="@bool/def_sms_delivery_reports_slot2"
                       android:key="pref_key_sms_delivery_reports_slot2"
                       android:summary="@string/pref_summary_sms_delivery_reports"
                       android:title="@string/pref_title_sms_delivery_reports_slot2" />
     <Preference android:key="pref_key_message_template"
-                      android:summary="@string/pref_summary_message_template"
                       android:title="@string/pref_title_message_template" />
     <Preference android:key="pref_key_manage_sim_messages"
                       android:title="@string/pref_title_manage_sim_messages" />
@@ -115,25 +114,25 @@
                       android:title="@string/manage_sdcard_messages" />
     <ListPreference
         android:defaultValue="-1"
-        android:dialogTitle="@string/pref_title_sms_validity_period"
+        android:dialogTitle="@string/pref_title_validity_period"
         android:entries="@array/entries_sms_validity_period"
         android:entryValues="@array/entries_sms_validity_period_value"
         android:key="pref_key_sms_validity_period"
-        android:title="@string/pref_title_sms_validity_period" />
+        android:title="@string/pref_title_validity_period" />
     <ListPreference
         android:defaultValue="-1"
-        android:dialogTitle="@string/pref_title_sms_validity_period"
+        android:dialogTitle="@string/pref_title_validity_period"
         android:entries="@array/entries_sms_validity_period"
         android:entryValues="@array/entries_sms_validity_period_value"
         android:key="pref_key_sms_validity_period_slot1"
-        android:title="@string/pref_title_sms_validity_period_slot1" />
+        android:title="@string/pref_title_validity_period_slot1" />
     <ListPreference
         android:defaultValue="-1"
-        android:dialogTitle="@string/pref_title_sms_validity_period"
+        android:dialogTitle="@string/pref_title_validity_period"
         android:entries="@array/entries_sms_validity_period"
         android:entryValues="@array/entries_sms_validity_period_value"
         android:key="pref_key_sms_validity_period_slot2"
-        android:title="@string/pref_title_sms_validity_period_slot2" />
+        android:title="@string/pref_title_validity_period_slot2" />
   </PreferenceCategory>
 
   <ListPreference
@@ -143,13 +142,11 @@
         android:entries="@array/entries_cdma_priority"
         android:entryValues="@array/values_cdma_priority"
         android:defaultValue="@string/default_cdma_priority"
-        android:dialogTitle="@string/prefDialogTitle_cdma_priority" />
+        android:dialogTitle="@string/pref_title_cdma_priority" />
 
   <PreferenceCategory android:title="@string/pref_sms_signature_title"
                       android:key="pref_key_sms_signature" >
-    <CheckBoxPreference android:key="pref_key_enable_signature"
-                      android:summaryOn="@string/pref_summary_enable_signature"
-                      android:summaryOff="@string/pref_summary_disable_signature"
+    <SwitchPreference android:key="pref_key_enable_signature"
                       android:title="@string/pref_title_enable_signature" />
     <EditTextPreference android:key="pref_key_edit_signature"
                       android:title="@string/pref_title_edit_signature"
@@ -158,50 +155,50 @@
 
   <PreferenceCategory android:title="@string/pref_mms_settings_title"
                       android:key="pref_key_mms_settings">
-    <CheckBoxPreference android:defaultValue="true"
+    <SwitchPreference android:defaultValue="true"
                       android:key="pref_key_mms_group_mms"
                       android:summary="@string/pref_summary_mms_group_mms"
                       android:title="@string/pref_title_mms_group_mms" />
-    <CheckBoxPreference android:defaultValue="@bool/def_mms_delivery_reports"
+    <SwitchPreference android:defaultValue="@bool/def_mms_delivery_reports"
                       android:key="pref_key_mms_delivery_reports"
                       android:summary="@string/pref_summary_mms_delivery_reports"
                       android:title="@string/pref_title_mms_delivery_reports" />
-    <CheckBoxPreference android:defaultValue="false"
+    <SwitchPreference android:defaultValue="false"
                       android:key="pref_key_mms_read_reports"
                       android:summary="@string/pref_summary_mms_read_reports"
                       android:title="@string/pref_title_mms_read_reports" />
-    <CheckBoxPreference android:defaultValue="@bool/def_sms_auto_retrieval"
+    <SwitchPreference android:defaultValue="@bool/def_sms_auto_retrieval"
                       android:key="pref_key_mms_auto_retrieval"
                       android:title="@string/pref_title_mms_auto_retrieval"
                       android:summary="@string/pref_summary_mms_auto_retrieval" />
-    <CheckBoxPreference android:layout="?android:attr/preferenceLayoutChild"
+    <SwitchPreference android:layout="?android:attr/preferenceLayoutChild"
                         android:dependency="pref_key_mms_auto_retrieval"
                         android:defaultValue="false"
                         android:key="pref_key_mms_retrieval_during_roaming"
                         android:title="@string/pref_title_mms_retrieval_during_roaming"
                         android:summary="@string/pref_summary_mms_retrieval_during_roaming" />
     <ListPreference android:key="pref_key_mms_expiry"
-                    android:title="@string/pref_title_mms_save_time"
-                    android:dialogTitle="@string/pref_title_mms_save_time"
+                    android:title="@string/pref_title_validity_period"
+                    android:dialogTitle="@string/pref_title_validity_period"
                     android:entries="@array/save_time"
                     android:entryValues="@array/save_time_values"
                     android:defaultValue="0" />
     <ListPreference android:key="pref_key_mms_expiry_slot1"
-                    android:title="@string/pref_title_mms_save_time_slot1"
-                    android:dialogTitle="@string/pref_title_mms_save_time_slot1"
+                    android:title="@string/pref_title_validity_period_slot1"
+                    android:dialogTitle="@string/pref_title_validity_period"
                     android:entries="@array/save_time"
                     android:entryValues="@array/save_time_values"
                     android:defaultValue="0" />
     <ListPreference android:key="pref_key_mms_expiry_slot2"
-                    android:title="@string/pref_title_mms_save_time_slot2"
-                    android:dialogTitle="@string/pref_title_mms_save_time_slot2"
+                    android:title="@string/pref_title_validity_period_slot2"
+                    android:dialogTitle="@string/pref_title_validity_period"
                     android:entries="@array/save_time"
                     android:entryValues="@array/save_time_values"
                     android:defaultValue="0" />
   </PreferenceCategory>
   <PreferenceCategory android:title="@string/pref_notification_settings_title"
                       android:key="pref_key_notification_settings">
-    <CheckBoxPreference android:key="pref_key_enable_notifications"
+    <SwitchPreference android:key="pref_key_enable_notifications"
                         android:title="@string/pref_title_notification_enabled"
                         android:defaultValue="true" />
     <RingtonePreference android:key="pref_key_ringtone"
@@ -209,7 +206,7 @@
                         android:ringtoneType="notification"
                         android:dependency="pref_key_enable_notifications"
                         android:defaultValue="content://settings/system/notification_sound" />
-    <CheckBoxPreference android:key="pref_key_vibrate"
+    <SwitchPreference android:key="pref_key_vibrate"
                         android:title="@string/pref_title_notification_vibrateWhen"
                         android:dependency="pref_key_enable_notifications"
                         android:defaultValue="false" />
@@ -218,7 +215,7 @@
                       android:key="pref_key_smsc" >
   </PreferenceCategory>
   <PreferenceCategory android:title="@string/pref_wap_push_title">
-    <CheckBoxPreference android:key="pref_key_enable_wap_push"
+    <SwitchPreference android:key="pref_key_enable_wap_push"
                         android:title="@string/pref_title_wap_push_enabled"
                         android:summary="@string/pref_summary_wap_push_enabled"
                         android:defaultValue="@bool/def_wap_push_enabled" />
@@ -226,20 +223,20 @@
 
   <!-- QuickMessage settings -->
   <PreferenceCategory android:title="@string/pref_quickmessage">
-      <CheckBoxPreference
+      <SwitchPreference
               android:key="pref_dark_theme"
               android:title="@string/pref_dark_theme_title"
               android:summary="@string/pref_dark_theme_summary"
               android:defaultValue="false" />
 
-      <CheckBoxPreference
+      <SwitchPreference
               android:key="pref_key_quickmessage"
               android:title="@string/pref_quickmessage_title"
               android:dependency="pref_key_enable_notifications"
               android:summary="@string/pref_quickmessage_summary"
               android:defaultValue="false" />
 
-      <CheckBoxPreference
+      <SwitchPreference
               android:key="pref_key_qm_lockscreen"
               android:title="@string/pref_wake_unlock_title"
               android:summary="@string/pref_wake_unlock_summary"
@@ -247,7 +244,7 @@
               android:dependency="pref_key_quickmessage"
               android:defaultValue="false" />
 
-      <CheckBoxPreference
+      <SwitchPreference
               android:key="pref_key_close_all"
               android:title="@string/pref_close_all_title"
               android:summary="@string/pref_close_all_summary"
